--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -44,6 +44,13 @@
                 android:layout_gravity="center"
                 android:textSize="20sp"
                 android:id="@+id/like_text"/>
+
+            <ImageView
+                android:id="@+id/comment_btn"
+                android:layout_width="55dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/comment" />
         </LinearLayout>
 
     </LinearLayout>
